--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -20,17 +20,16 @@
         routerLink="home"
         class="disableBorderWhenActive"
         routerLinkActive="active"
-        data-target="#menu-content"
         data-toggle="collapse"
+
       >
         <a><i class="fa fa-home"></i> Home</a>
       </li>
       <li
         routerLink="about"
-        data-toggle="collapse"
-        data-target="#menu-content"
         routerLinkActive="active"
         class="disableBorderWhenActive"
+        data-toggle="collapse"
       >
         <a><i class="fa fa-id-card"></i> About</a>
       </li>
@@ -38,8 +37,6 @@
         routerLink="skills"
         class="disableBorderWhenActive"
         routerLinkActive="active"
-        data-target="#menu-content"
-        data-toggle="collapse"
       >
         <a
           ><i style="padding-right: 2.5%"><app-svg-sword></app-svg-sword></i
@@ -50,8 +47,7 @@
         data-toggle="collapse"
         data-target="#port"
         class="collapsed disableBorderWhenActive"
-        data-toggle="collapse"
-        data-target="#menu-content"
+
       >
         <a
           ><i class="fab fa-uncharted"></i> Portfolio
@@ -63,8 +59,7 @@
           routerLink="/project"
           class="disableBorderWhenActive"
           routerLinkActive="active"
-          data-toggle="collapse"
-          data-target="#menu-content"
+
         >
           <a><span class="fas fa-globe"></span> Projects </a>
         </li>
@@ -72,8 +67,7 @@
           routerLink="/acproject"
           class="disableBorderWhenActive"
           routerLinkActive="active"
-          data-toggle="collapse"
-          data-target="#menu-content"
+
         >
           <a><span class="fas fa-graduation-cap"></span> Academic Projects </a>
         </li>
@@ -83,8 +77,7 @@
         routerLink="/resume"
         class="disableBorderWhenActive"
         routerLinkActive="active"
-        data-toggle="collapse"
-        data-target="#menu-content"
+
       >
         <a><i class="fa fa-clipboard-list"></i> Resume</a>
       </li>
@@ -92,16 +85,15 @@
         routerLink="/education"
         class="disableBorderWhenActive"
         routerLinkActive="active"
-        data-toggle="collapse"
-        data-target="#menu-content"
+
       >
         <a><i class="fa fa-university"></i> Education </a>
       </li>
       <li
         routerLink="/pub"
         class="disableBorderWhenActive"
-        data-toggle="collapse"
-        data-target="#menu-content"
+        routerLinkActive="active"
+
       >
         <a><i class="fa fa-scroll"></i> Publications</a>
       </li>
@@ -109,8 +101,7 @@
         routerLink="/contact"
         class="disableBorderWhenActive"
         routerLinkActive="active"
-        data-toggle="collapse"
-        data-target="#menu-content"
+
       >
         <a><i class="fas fa-at"></i> Contact</a>
       </li>
