--- a/src/app/content/about-me/about-me.component.html
+++ b/src/app/content/about-me/about-me.component.html
@@ -4,38 +4,53 @@
       <app-header [title]="'About'"></app-header>
     </div>
   </div>
-  <div class="row font-weight-bold" style="font-size: x-large">
-    <div class="col-12">
-      <i>My name is Alex and i'm a full stack developer.</i>
+  <div class="row" style="font-size: x-large">
+    <div class="col-sm-4">
+      <img src="../../../assets/image/me.jpeg" style="width: 100%" />
     </div>
-    <div class="col-12">
-      <i>A little about myself:</i>
-    </div>
-    <div class="col-12">
-      <i>
-        from a very young age i have loved technology and was very passion about
-        it..</i
-      >
-    </div>
-    <div class="col-12">
-      <i>
-        I’m a mission-driven full stack developer with a passion for thoughtful
-        UI/UX design, collaboration, and teaching.</i
-      >
-    </div>
-    <div class="col-12">
-      <i>
+    <div class="col-sm">
+      <h2>Hey there! I'm Alex <b style="color: #2574af">Moshinsky</b></h2>
+      <p>
+        A full stack developer with over 1 year of experience in designing and
+        developing web applications.
+      </p>
+      <p>
+        Looking for challenging roles in web and mobile industry to enhance my
+        skills and provide my services to add value to the products of the
+        organization.
+      </p>
+      <p>
+        Highly motivated self learner with a passion for learning and keeping
+        informed of the latest in technology.
+      </p>
+      <p>
         I’m constantly looking for opportunities and challenges that are
         meaningful to me.
-      </i>
+      </p>
     </div>
-    <div class="col-12">
-      <i>
-        I've never stopped engaging my passion to help others and solve
-        problems.
-      </i>
-      <div class="col-12">
-        <i style="font-size: xx-large; color: red">WIP</i>
+  </div>
+  <div style="background-color: #2574af; color: white;">
+    <div class="row mt-5">
+      <div class="col text-center">
+        <h3>When I'm not coding, you can find me...</h3>
+      </div>
+    </div>
+    <div class="row mt-5 justify-content-center text-center">
+      <div class="col-sm">
+        <app-svg-videogame></app-svg-videogame>
+        <div class="text-center">Play Video games</div>
+      </div>
+      <div class="col-sm">
+        <app-svg-gym></app-svg-gym>
+        <div class="text-center">At the gym</div>
+      </div>
+      <div class="col-sm">
+        <app-svg-world></app-svg-world>
+        <div class="text-center">Travel</div>
+      </div>
+      <div class="col-sm">
+        <app-svg-friends></app-svg-friends>
+        <div class="text-center">With friends</div>
       </div>
     </div>
   </div>
