--- a/src/app/content/resume-page/resume-page.component.html
+++ b/src/app/content/resume-page/resume-page.component.html
@@ -1,35 +1,91 @@
 <div class="container">
-  <div class="row">
-    <div class="text-center col-12">
+  <div class="row" >
+        <div class="text-center col-12">
       <app-header [title]="'Resume'"></app-header>
     </div>
-  </div>
-  <div style="background-color: rgba(255, 255, 255, 0.74)">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card-body">
-          <div id="content">
-            <ul class="timeline">
-              <li class="event" data-date="???? - 2021">
-                <h3>Greatness Awaits</h3>
-                <p></p>
-              </li>
-              <li class="event" data-date="2021 - 2020">
-                <h3>Web Developer</h3>
-                <p>Freelance web developer</p>
-              </li>
-              <li class="event" data-date="2021 - 2020">
-                <h3>QA Engineer</h3>
-                <p>TrulyProtect cyber security start-up company.</p>
-                <p>
-                  In charge of writing and executing testing scripts, as well as
-                  executing testing plans for hypervisor, testing the encrypted
-                  programs
-                </p>
-              </li>
-            </ul>
-          </div>
-        </div>
+    <div class="col-lg-6 col-md-6 col-sm-6" style="background-color: rgba(255, 255, 255, 0.74)">
+      <div class="education wow fadeInRight">
+        <ul class="timeline">
+          <li>
+            <i class="fas fa-graduation-cap"></i>
+            <h2 class="timelin-title">Education</h2>
+          </li>
+          <li>
+            <div class="content-text">
+              <h3 class="line-title">Computer Science B.Sc</h3>
+              <span>2017 - 2020</span>
+              <p class="line-text">
+                Graduate of computer science B.Sc. from college of management
+                academic studies in Rishon LeZion, Isreal.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="content-text">
+              <h3 class="line-title">Quality Assurance</h3>
+              <span>2010 - 2012</span>
+              <p class="line-text">
+                John Bryce College (Graduate), 470 academic hours.
+              </p>
+              <p class="line-text">
+                During the course I've experienced – Testing Methodologies
+                (ISTQB). Reading and writing test documents (STD, STP, STR)-
+                according to IEEE829 standard. Writing Test Plans, Cases &
+                Processes. Testing Tools- VSTS (MTM 2012), Quality Center, QTP
+                Operating Systems- Windows, Unix, Linux , OSX Languages- Java,
+                Css, HTML. Database- SQL
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="content-text">
+              <h3 class="line-title">High School</h3>
+              <span>2005 - 2008</span>
+              <p class="line-text">Computer studies in Yohanna Jabotinsky.</p>
+              <p class="line-text">
+                I studied Prolog and Pascal programing languages
+              </p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-6" style="background-color: rgba(255, 255, 255, 0.74)">
+      <div class="experience wow fadeInRight">
+        <ul class="timeline">
+          <li>
+            <i class="fas fa-briefcase"></i>
+            <h2 class="timelin-title">Experience</h2>
+          </li>
+          <li>
+            <div class="content-text">
+              <h3 class="line-title">Greatness Awaits</h3>
+              <span> 2021 - ???</span>
+              <p class="line-text"></p>
+            </div>
+          </li>
+          <li>
+            <div class="content-text">
+              <h3 class="line-title">Web Developer</h3>
+              <span>2020 - 2021</span>
+              <p class="line-text">Freelance web developer</p>
+            </div>
+          </li>
+          <li>
+            <div class="content-text">
+              <h3 class="line-title">QA Engineer</h3>
+              <span>2020 - 2021</span>
+              <p class="line-text">
+                TrulyProtect cyber security start-up company.
+              </p>
+              <p class="line-text">
+                In charge of writing and executing testing scripts, as well as
+                executing testing plans for hypervisor, testing the encrypted
+                programs
+              </p>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
