--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -82,14 +82,6 @@
         <a><i class="fa fa-clipboard-list"></i> Resume</a>
       </li>
       <li
-        routerLink="/education"
-        class="disableBorderWhenActive"
-        routerLinkActive="active"
-
-      >
-        <a><i class="fa fa-university"></i> Education </a>
-      </li>
-      <li
         routerLink="/pub"
         class="disableBorderWhenActive"
         routerLinkActive="active"
@@ -110,7 +102,7 @@
           ><i class="fab fa-github fa-2x sideBarMyLinkIconStyle"></i
         ></a>
         <a
-          href="https://github.com/XSkylinex"
+          href="https://www.linkedin.com/in/alex1mosh/"
           target="_blank"
           title="LinkedIn"
           class="pl-3"
