--- a/src/app/content/resume-page/resume-page.component.css
+++ b/src/app/content/resume-page/resume-page.component.css
@@ -1,117 +1,111 @@
-body {
-  margin-top: 20px;
+@import "https://fonts.googleapis.com/css?family=Shadows+Into+Light|Source+Sans+Pro:400,700";
+
+h1,
+h2,
+h3,
+h4 {
+  font-size: 38px;
+  font-weight: 700;
+  font-family: source sans pro, sans-serif;
 }
-.timeline {
-  border-left: 3px solid #2574af;
-  border-bottom-right-radius: 4px;
-  border-top-right-radius: 4px;
-  background: #2573af36;
-  margin-left: 15%;
-  letter-spacing: 0.2px;
-  position: relative;
-  line-height: 1.4em;
-  font-size: 1.03em;
-  padding: 50px;
+.script-font {
+  font-family: shadows into light, cursive;
+}
+a {
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+a:hover {
+  text-decoration: none;
+}
+a a:focus {
+  outline: none;
+}
+p {
+  font-weight: 400;
+  font-family: source sans pro, sans-serif;
+  margin: 0;
+  font-size: 14px;
+}
+
+ul,
+ol {
+  list-style: outside none none;
+  margin: 0;
+  padding: 0;
+}
+ul li,
+ol li {
   list-style: none;
-  text-align: left;
-  max-width: 50%;
 }
 
-@media (max-width: 767px) {
-  .timeline {
-    max-width: 98%;
-    padding: 25px;
-  }
-}
-
-.timeline h1 {
-  font-weight: 300;
-  font-size: 1.4em;
-}
-
-.timeline h2,
-.timeline h3 {
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 10px;
-}
-
-.timeline .event {
-  border-bottom: 1px dashed black;
-  padding-bottom: 25px;
-  margin-bottom: 25px;
+.timeline {
   position: relative;
 }
-
-@media (max-width: 767px) {
-  .timeline .event {
-    padding-top: 30px;
-  }
+.timeline .timelin-title {
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-left: 25px;
 }
-
-.timeline .event:last-of-type {
-  padding-bottom: 0;
-  margin-bottom: 0;
-  border: none;
+.timeline li {
+  padding: 0 20px 20px 30px;
+  list-style: none;
+  border-left: 2px solid #f1f1f1;
 }
-
-.timeline .event:before,
-.timeline .event:after {
-  position: absolute;
+.timeline li .content-text {
+  background: #f2f2f2;
+  padding: 20px;
+}
+.timeline li .line-title {
+  font-size: 16px;
+  line-height: 6px;
+}
+.timeline li span {
+  font-size: 12px;
+  padding: 9px 0;
   display: block;
-  top: 0;
 }
-
-.timeline .event:before {
-  left: -207px;
-  content: attr(data-date);
-  text-align: right;
-  font-weight: bolder;
-  font-size: 0.9em;
-  min-width: 120px;
+.timeline li .line-text {
+  color: #888;
+  line-height: 18px;
 }
-
-@media (max-width: 767px) {
-  .timeline .event:before {
-    left: 0px;
-    text-align: left;
-  }
+.timeline li:first-child:before {
+  border: 0;
+  background: 0 0;
+  position: relative;
 }
-
-.timeline .event:after {
-  -webkit-box-shadow: 0 0 0 3px #2574af;
-  box-shadow: 0 0 0 3px #2574af;
-  left: -55.8px;
-  background: #d19b3d;
-  border-radius: 50%;
-  height: 9px;
-  width: 9px;
+.timeline li:last-child {
+  padding: 0 20px 0 30px;
+}
+.timeline li:before {
   content: "";
-  top: 5px;
+  border: solid 2px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50px;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  font-size: 8px;
+  margin-left: -35px;
+  font-weight: 400;
+  background: #fff;
+  display: block;
+  position: absolute;
+  margin-top: 18px;
+  border-color: #2574B1 !important;
 }
-
-@media (max-width: 767px) {
-  .timeline .event:after {
-    left: -31.8px;
-  }
-}
-
-.rtl .timeline {
-  border-left: 0;
-  text-align: right;
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
-  border-right: 3px solid #2574af;
-}
-
-.rtl .timeline .event::before {
-  left: 0;
-  right: -170px;
-}
-
-.rtl .timeline .event::after {
-  left: 0;
-  right: -55.8px;
+.timeline li:first-child i {
+  font-size: 20px;
+  float: left;
+  margin-left: -30px;
+  line-height: 50px;
+  border-radius: 30px;
+  margin: -12px -55px;
+  background: #2574B1;
+  color: #fff;
+  width: 50px;
+  height: 50px;
+  text-align: center;
 }
