About, image fix

--- a/src/app/content/about-me/about-me.component.html
+++ b/src/app/content/about-me/about-me.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row" style="font-size: x-large">
     <div class="col-sm-4">
-      <img src="../../../assets/image/me.jpeg" style="width: 100%" />
+      <img src="https://s3-eu-west-1.amazonaws.com/moshinsky.net/me.jpeg" style="width: 100%" />
     </div>
     <div class="col-sm">
       <h2>Hey there! I'm Alex <b style="color: #2574af">Moshinsky</b></h2>
