--- a/src/app/content/contact-page/contact-page.component.html
+++ b/src/app/content/contact-page/contact-page.component.html
@@ -4,4 +4,44 @@
       <app-header [title]="'Contact'"></app-header>
     </div>
   </div>
+  <div class="row changeFont aboutMeBackground mb-5" style="font-size: x-large">
+    <div class="col">
+      Hey there! If you have a question, work or request. Or if you are a
+      developer who wants to connect or collaborate on some sort of project.
+      Then shoot me a quick message
+      <a href="mailto:alex1mosh@gmail.com">alex1mosh@gmail.com</a> and I will
+      get back to you ASAP. Otherwise feel free to connect with me on one of my
+      social media channels
+    </div>
+  </div>
+  <div class="row justify-content-center aboutMeBackground mt-5">
+    <div class="col col-lg-1">
+      <a href="https://github.com/XSkylinex" target="_blank" title="GitHub"
+      ><i class="fab fa-github fa-3x sideBarMyLinkIconStyle"></i
+        ></a>
+      </div>
+      <div class="col col-lg-1">
+        <a
+        href="https://www.linkedin.com/in/alex1mosh/"
+        target="_blank"
+        title="LinkedIn"
+        >
+        <i class="fab fa-linkedin fa-3x linkedInColor"></i>
+      </a>
+    </div>
+    <div class="col col-lg-1">
+      <a
+      href="https://www.facebook.com/alex.moshinsky/"
+      target="_blank"
+      title="Facebook"
+      ><i class="fab fa-facebook-square fa-3x facebookColor"></i
+        ></a>
+      </div>
+    </div>
+    <div class="row mt-5 changeFont aboutMeBackground" style="font-size: x-large">
+      <div class="col text-center">
+        Peace Out!
+      </div>
+    </div>
+    <!-- <div class="col text-center">Peace Out!</div> -->
 </div>
