Home italic add

--- a/src/app/content/home-page/home-page.component.html
+++ b/src/app/content/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="center">
   <h1>
-    "Creativity Is Intelligence Having Fun"
+    <i> "Creativity Is Intelligence Having Fun" </i>
     <div>
       <span class="albertEinsteinText"><small>Albert Einstein</small></span>
     </div>
