Delete home page and fix project mobile

--- a/src/app/content/portfolio/projects-page/projects-page.component.html
+++ b/src/app/content/portfolio/projects-page/projects-page.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row justify-content-center">
-    <div class="col-5 text-center">
+    <div class="col-lg-6 col-md-6 col-sm-6 text-center">
       <h5>Miky zart webiste</h5>
       <div class="comingSoonBackground">
         I developed for my artist friend, Miky Zar. I took this project on, while
@@ -116,7 +116,7 @@
         </div>
       </div>
     </div>
-    <div class="col-5 comingSoonBackground">
+    <div class="col-lg-6 col-md-6 col-sm-6 comingSoonBackground">
       <div class="comingSoon">
         <p>Coming soon...</p>
       </div>
