--- a/src/app/content/portfolio/projects-page/projects-page.component.html
+++ b/src/app/content/portfolio/projects-page/projects-page.component.html
@@ -25,12 +25,12 @@
       </div>
       <div class="borderProjectPage mt-2">
         <div class="row text-left">
-          <div class="col">
+          <div class="col ml-2">
             <p>Front-end</p>
             <hr />
           </div>
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-sm-2 col-6 svgIcons">
             <app-svg-angular></app-svg-angular>
             <div class="svgIconsText">Angular 11.1</div>
@@ -56,12 +56,12 @@
 
       <div class="borderProjectPage mt-2">
         <div class="row text-left">
-          <div class="col">
+          <div class="col ml-2">
             <p>Back-end</p>
             <hr />
           </div>
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-sm-2 col-6 svgIcons">
             <app-svg-expressjs></app-svg-expressjs>
             <div class="svgIconsText">Express.js</div>
@@ -87,12 +87,12 @@
 
       <div class="borderProjectPage mt-2">
         <div class="row text-left">
-          <div class="col">
+          <div class="col ml-2">
             <p>Cloud</p>
             <hr />
           </div>
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-sm-2 col-6 svgIcons">
             <app-svg-aws></app-svg-aws>
             <div class="svgIconsText">AWS</div>
