--- a/src/app/content/about-me/about-me.component.html
+++ b/src/app/content/about-me/about-me.component.html
@@ -11,7 +11,7 @@
     <div class="col-sm">
       <h2>Hey there! I'm Alex <b style="color: #2574af">Moshinsky</b></h2>
       <p>
-        A full stack developer with over 1 year of experience in designing and
+        A full stack developer with experience of a many software projects and
         developing web applications.
       </p>
       <p>
@@ -36,19 +36,19 @@
       </div>
     </div>
     <div class="row mt-5 justify-content-center text-center">
-      <div class="col-sm">
+      <div class="col-sm mb-3">
         <app-svg-videogame></app-svg-videogame>
         <div class="text-center">Play Video games</div>
       </div>
-      <div class="col-sm">
+      <div class="col-sm mb-3">
         <app-svg-gym></app-svg-gym>
         <div class="text-center">At the gym</div>
       </div>
-      <div class="col-sm">
+      <div class="col-sm mb-3">
         <app-svg-world></app-svg-world>
         <div class="text-center">Travel</div>
       </div>
-      <div class="col-sm">
+      <div class="col-sm mb-3">
         <app-svg-friends></app-svg-friends>
         <div class="text-center">With friends</div>
       </div>
