Fix about gramma

--- a/src/app/content/about-me/about-me.component.html
+++ b/src/app/content/about-me/about-me.component.html
@@ -11,7 +11,7 @@
     <div class="col-sm">
       <h2>Hey there! I'm Alex <b style="color: #2574af">Moshinsky</b></h2>
       <p>
-        A full stack developer with experience of a many software projects and
+        A full stack developer with experience in a many software projects and
         developing web applications.
       </p>
       <p>
