fix about gramma 2

--- a/src/app/content/about-me/about-me.component.html
+++ b/src/app/content/about-me/about-me.component.html
@@ -11,12 +11,12 @@
     <div class="col-sm">
       <h2>Hey there! I'm Alex <b style="color: #2574af">Moshinsky</b></h2>
       <p>
-        A full stack developer with experience in a many software projects and
+        A full stack developer with experience in many different software projects and
         developing web applications.
       </p>
       <p>
-        Looking for challenging roles in web and mobile industry to enhance my
-        skills and provide my services to add value to the products of the
+        Looking for challenging roles in the web and mobile industry to enhance my
+        skills and provide my services adding value to the products of the
         organization.
       </p>
       <p>
@@ -38,7 +38,7 @@
     <div class="row mt-5 justify-content-center text-center">
       <div class="col-sm mb-3">
         <app-svg-videogame></app-svg-videogame>
-        <div class="text-center">Play Video games</div>
+        <div class="text-center">Playing video games</div>
       </div>
       <div class="col-sm mb-3">
         <app-svg-gym></app-svg-gym>
