--- a/src/app/content/about-me/about-me.component.html
+++ b/src/app/content/about-me/about-me.component.html
@@ -16,7 +16,7 @@
       </p>
       <p>
         Looking for challenging roles in the web and mobile industry to enhance my
-        skills and provide my services adding value to the products of the
+        skills and provide my services, adding value to the products of the
         organization.
       </p>
       <p>
