Add blog, and svg sass

--- a/src/app/content/skills-page/skills-page.component.html
+++ b/src/app/content/skills-page/skills-page.component.html
@@ -32,6 +32,10 @@
       <app-svg-css3></app-svg-css3>
       <div>CSS3</div>
     </div>
+    <div class="col-6 col-lg-2 text-center">
+      <app-svg-sass-scss></app-svg-sass-scss>
+      <div>SASS</div>
+    </div>
   </div>
 
   <div class="row borderSkills mt-3">
