--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -38,7 +38,6 @@
         data-toggle="collapse"
         data-target="#port"
         class="collapsed disableBorderWhenActive"
-
       >
         <a
           ><i class="fab fa-uncharted"></i> Portfolio
@@ -50,7 +49,6 @@
           routerLink="/project"
           class="disableBorderWhenActive"
           routerLinkActive="active"
-
         >
           <a><span class="fas fa-globe"></span> Projects </a>
         </li>
@@ -58,7 +56,6 @@
           routerLink="/acproject"
           class="disableBorderWhenActive"
           routerLinkActive="active"
-
         >
           <a><span class="fas fa-graduation-cap"></span> Academic Projects </a>
         </li>
@@ -68,7 +65,6 @@
         routerLink="/resume"
         class="disableBorderWhenActive"
         routerLinkActive="active"
-
       >
         <a><i class="fa fa-clipboard-list"></i> Resume</a>
       </li>
@@ -76,15 +72,24 @@
         routerLink="/pub"
         class="disableBorderWhenActive"
         routerLinkActive="active"
-
       >
         <a><i class="fa fa-scroll"></i> Publications</a>
+      </li>
+      <li
+        routerLink="#"
+        class="disableBorderWhenActive"
+        routerLinkActive="active"
+      >
+        <a
+          ><i class="far fa-newspaper"></i>
+
+          Blog - soon</a
+        >
       </li>
       <li
         routerLink="/contact"
         class="disableBorderWhenActive"
         routerLinkActive="active"
-
       >
         <a><i class="fas fa-at"></i> Contact</a>
       </li>
