Miky project text fix

--- a/src/app/content/portfolio/projects-page/projects-page.component.html
+++ b/src/app/content/portfolio/projects-page/projects-page.component.html
@@ -8,10 +8,10 @@
     <div class="col-lg-6 col-md-6 col-sm-6 text-center">
       <h5>Miky zart webiste</h5>
       <div class="comingSoonBackground">
-        I developed for my artist friend, Miky Zar. I took this project on, while
-        recognizing the need to move his business online due of COVID-19’s new
-        reality forced on us all. I'm very proud of the final outcome delivered
-        for the client.
+        I developed for my artist friend, Miky Zar. I took this project on,
+        recognizing the need to move his business online due to COVID-19’s new
+        reality that has been forced on us all. I'm very proud of the final
+        outcome that I was able to deliver to my client.
       </div>
       <div class="row text-center">
         <div class="col">
